--- a/website/package.json
+++ b/website/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "postcss": ">=8.4.31"
   },
   "scripts": {
     "start": "react-scripts start",
