--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,15 +17,10 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-      - name: cd website
-        run: ls
-      - name: cd website
-        run: cd website 
-      - name: cd website
-        run: pwd
       - name: Detect package manager
         id: detect-package-manager
         run: |
+          cd website 
           if [ -f "${{ github.workspace }}/yarn.lock" ]; then
             echo "manager=yarn" >> $GITHUB_OUTPUT
             echo "command=install" >> $GITHUB_OUTPUT
