--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
       - name: Change Directory to Website
-        run: cd website
+        run: cd /website
       - name: Detect package manager
         id: detect-package-manager
         run: |
